--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,20 +1,19 @@
 <!--index.wxml-->
 <scroll-view scroll-y="true" class="container" bindscrolltoupper="upper" upper-threshold="10" lower-threshold="5" bindscrolltolower="lower" scroll-into-view="{{toView}}" scroll-top="{{scrollTop}}">
-
   <view class="search flex-wrp">
+
     <view class="search-left flex-item">
       <image src="../../images/search.png"></image>
-      <input placeholder="寻找大神" placeholder-class="search-placeholder" />
+      <input placeholder="搜索话题, 问题或人" placeholder-class="search-placeholder" />
     </view>
-      <!--bind事件绑定不会阻止冒泡事件向上冒泡，catch事件绑定可以阻止冒泡事件向上冒泡-->
-      <view class="search-right flex-item" bindtap="upper">
-          <image src="../../images/lighting.png"></image>
-      </view>  
+
+    <view class="search-right flex-item" bindtap="upper">
+      <image src="../../images/lighting.png"></image>
+    </view>
+
   </view>
-  <block wx:for="{[feed}}" wx:for-index="idx" wx:for-item="item" data-idx="{{idx}}">
-
+  <block wx:for="{{feed}}" wx:for-index="idx" wx:for-item="item" data-idx="{{idx}}">
     <view class="feed-item">
-
       <view class="feed-source">
         <a class="">
           <view class="avatar">
@@ -22,10 +21,8 @@
           </view>
           <text>{{item.feed_source_name}}{{item.feed_source_txt}}</text>
         </a>
-
         <image class="item-more" mode="aspectFit" src="../../images/more.png"></image>
       </view>
-
 
       <view class="feed-content">
         <view class="question" qid="{{question_id}}" bindtap="bindQueTap">
@@ -33,7 +30,6 @@
             <text>{{item.question}}</text>
           </a>
         </view>
-
         <view class="answer-body">
           <view bindtap="bindItemTap">
             <text class="answer-txt" aid="{{answer_id}}">{{item.answer_ctnt}}</text>
@@ -46,10 +42,9 @@
               <a>{{item.comment_num}} 评论 </a>
             </view>
             <view class="follow-it">
-              <a>关注问题</a>
+              <a>收听</a>
             </view>
           </view>
-
         </view>
       </view>
     </view>
