--- a/app.wxss
+++ b/app.wxss
@@ -3,15 +3,17 @@
   height: 100%;
   display: flex;
   flex-direction: column;
-  align-items: stretch;
- /* flex子项在flex容器的当前行的侧轴（纵轴）方向上的对齐方式。 */
+  align-items: center;
   justify-content: space-between;
   /*padding: 200rpx 0;*/
   box-sizing: border-box;
   background: #F0F4F3;
 }
 
-
+.container.withtab{
+  margin: 0rpx 0 0 0;
+  /*top: 105rpx;*/
+}
 .flex-wrp{
   display: flex;
 }
