--- a/pages/answer/answer.wxml
+++ b/pages/answer/answer.wxml
@@ -1,17 +1,17 @@
 <!--answer.wxml-->
 <view class="container">
     <view class="question" bindtap="toQuestion">
-        <text class="question-title">选择 Kindle 而不是纸质书的原因是什么？</text>
+        <text class="question-title">设主存容量为256K字，Cache容量为2K字， 块长为4。 （1）设计Cache地址格式，Cache中可装入多少块 数据？ （2）在直接映射方式下，设计主存地址格式。 （3）在四路组相联映射方式下，设计主存地址格 式。 （4）在全相联映射方式下，设计主存地址格式。 （5）若存储字长为32位，存储器按字节寻址，写 出上述三种映射方式下主存的地址格式             </text>
     </view>
     <view class="answerer-wrp">
         <view class="bg-half"></view>
         <view class="answerer flex-wrp">
             <view class="avatar flex-item">
-                <image src="../../images/icon1.jpeg"></image>
+                <image src="../../images/new1.jpeg"></image>
             </view>
             <view class="answerer-info flex-item">
                 <text class="answerer-name">Rebecca</text>
-                <text class="answerer-des">WEB前端*不靠谱天气预报员*想做代码小仙女</text>
+                <text class="answerer-des"></text>
             </view>
             <view class="follow flex-item">
                 <text>十 关注</text>
@@ -19,63 +19,20 @@
         </view>
     </view>
     <view class="answer-content">
-        <text>难道不明白纸质书更贵啊！！！
-
-            若觉得kindle更贵，我觉得要么阅读量太少，那确实没有买kindle的必要。要么买的都是盗版的纸质书？我不清楚不加以评论。。。
-
-            另外，用kindle看小说的怎么真心不懂了。题主不看小说么？难道题主拿来看教科书还是技术文档？还是题主觉得小说就是小时代内样的？（对小时代没偏见，尊重多样性）
-
-            而且纸质书搬起来真心困难啊！当初毕业带不回来，忍痛卖了不少好桑心！
-
-            碎片时间阅读总不能天天背着一本书吧，那么占地方。
-
-            看到描述最后一段，感觉有骗答案的嫌疑
-
+        <text>存储器（主存和缓存地址）以八位二进制为一个基本单元,也就是一个字节,每个存储单元对应着一个地址主存容量为512KB=512k*1B（数据线8根即8位），主存地址看地址总线19位即512K，数据总线为3根，表示8位1B只有直接映射方式下，主存子块标记可用主存...
         </text>
         <image src="../../images/1444983318907-_DSC1826.jpg"></image>
         <text>
-            难道不明白纸质书更贵啊！！！
-
-            若觉得kindle更贵，我觉得要么阅读量太少，那确实没有买kindle的必要。要么买的都是盗版的纸质书？我不清楚不加以评论。。。
-
-            另外，用kindle看小说的怎么真心不懂了。题主不看小说么？难道题主拿来看教科书还是技术文档？还是题主觉得小说就是小时代内样的？（对小时代没偏见，尊重多样性）
-
-            而且纸质书搬起来真心困难啊！当初毕业带不回来，忍痛卖了不少好桑心！
-
-            碎片时间阅读总不能天天背着一本书吧，那么占地方。
-
-            看到描述最后一段，感觉有骗答案的嫌疑
-
+           存储器（主存和缓存地址）以八位二进制为一个基本单元,也就是一个字节,每个存储单元对应着一个地址主存容量为512KB=512k*1B（数据线8根即8位），主存地址看地址总线19位即512K，数据总线为3根，表示8位1B只有直接映射方式下，主存子块标记可用主存...
         </text>
         <image src="../../images/1444983318907-_DSC1826.jpg"></image>
     </view>
 
     <view class="answer-footer flex-wrp">
-        <view class="good flex-item">
-            <view class="good-bad">
-                <image src="../../images/good-bad.png"></image>
-            </view>
-            <view class="good-num">2.1k</view>
-        </view>
+      
         <view class="operation-wrp flex-item">
             <view class="operation flex-wrp flex-tab">
-                <view class="operation-btn flex-item">
-                    <image src="../../images/flag.png"></image>
-                    <text>没有帮助</text>
-                </view>
-                <view class="operation-btn flex-item">
-                    <image src="../../images/heart2.png"></image>
-                    <text>感谢</text>
-                </view>
-                <view class="operation-btn flex-item">
-                    <image src="../../images/star2.png"></image>
-                    <text>收藏</text>
-                </view>
-                <view class="operation-btn flex-item">
-                    <image src="../../images/comment.png"></image>
-                    <text>302</text>
-                </view>
-
+             
             </view>
         </view>
 
