--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -4,17 +4,15 @@
   height: 1500rpx;
 }
 .container .search{
-  width: 100%rpx;
+  width: 735rpx;
   height: 65rpx;
-  padding: 12.5rpx 0rpx 12.5rpx 10rpx;
+  padding: 12.5rpx 0 12.5rpx 15rpx;
   background: #2A8CE5;
 }
 .container .search-left{
-  width: 100%;
-  margin-left: 100rpx;
-  margin-right: 100rpx;
+  flex: 8;
   background: #4EA3E7;
-  text-align: center;
+  text-align: left;
 }
 .container .search-left input{
   display: inline-block;
@@ -32,7 +30,7 @@
   padding: 15rpx 15rpx 15rpx 20rpx;
 }
 .container .search .search-right{
-   flex: 1; 
+  flex: 1;
 }
 .container .search .search-right image{
   width: 45rpx;
